<resources>
    <string name="app_name">WordsHero</string>
    <string name="title_home">Home</string>
    <string name="title_chart">Chart</string>
    <string name="title_message">Message</string>
    <string name="title_about">About</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_takeWords">拍照取词</string>
    <string name="title_mygame">我的游戏</string>
    <string name="title_wordbook">单词本</string>

    <!--copy from cw-->
    <string name="take_words">Take words</string>
    <string name="word_books">Word books</string>
    <string name="word_games">Word games</string>
    <string name="select_words">Select words</string>
    <string name="clues">Clues</string>
    <string name="word">Word</string>
    <string name="add_word">Add word</string>
    <string name="add_word_book">Add word book</string>
    <string name="edit_word">Edit</string>
    <string name="ok">OK</string>
    <string name="cancel">Cancel</string>
    <string name="begin_game">Start game</string>
    <string name="change_pdf">Generating PDF</string>
    <string name="preview_pdf">Preview PDF</string>
    <string name="create_pdf">Create PDF</string>
    <string name="scan_word">Scan words</string>

    <string name="create_game">Create puzzle</string>
    <string name="start_game">Start Game</string>
    <string name="title_activity_login">Sign in</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="book_title">Title</string>
    <string name="book_instruction">Instruction</string>
    <string name="translation">Translation</string>
    <string name="no_select">None</string>
    <string name="zh">简体中文</string>
    <string name="de">Deutsch</string>
    <string name="spa">Español</string>
    <string name="it">lingua italiana</string>
    <string name="jp">日本語</string>
    <string name="kor">한국어</string>
    <string name="ru">русский</string>
    <string name="pt">Português</string>
    <string name="fra">Le français</string>
    <string name="edt_limit">abcdefghigklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
    <string name="error_word_format">Please check the word format,lowercase English letters are required</string>
    <string name="add_word_book_success">Successfully added a word book.</string>
    <string name="add_word_book_fail">Adding a word book failed.</string>
    <string name="word_list">Word list</string>
    <string name="edit_word_book">Edit</string>
    <string name="save">Save</string>
    <string name="select_word_book">Select word book</string>
    <string name="successfully_added_word">Successfully added words</string>
    <string name="failed_added_word">Failed to add words, word already exists</string>
    <string name="fail_added_word">Partial words addition failed</string>
    <string name="edit">Edit</string>
    <string name="answer">Answer</string>
    <string name="puzzle_name">Puzzle name</string>
    <string name="instruction">Instruction</string>
    <string name="word_count">Word count</string>
    <string name="random">Randomly select according to the number of input words</string>
    <string name="deselect_all">Deselect all</string>
    <string name="select_all">Select all</string>
    <string name="delete_game">Delete</string>
    <string name="title_repeated">Title cannot be repeated,please re-enter title</string>
    <string name="successful_create_pdf">Generate PDF successfully</string>
    <string name="fail_create_pdf">Generate PDF failed</string>
    <string name="random_word_count_limit">Cannot exceed the number of words below</string>
    <string name="empty_title">Please enter a title</string>
    <string name="confirm_to_delete_game">Confirm to delete this game?</string>
    <string name="confirm_to_delete_book">Confirm to delete this word book?</string>
    <string name="file_not_found">File not found!</string>
    <string name="save_path">Save path:</string>
    <string name="open_file_now">Open it now?</string>
    <string name="missing_clue">is missing the clue</string>
    <string name="empty_word_list">No words selected</string>
    <string name="no_permission">Please open storage permissions</string>
    <string name="open_pdf">Open</string>
    <string name="delete_word">Delete word</string>
    <string name="undo">Undo</string>
    <string name="empty_select_book">Please select at least one word book</string>
    <string name="generate">Generate</string>
    <string name="delete_book">Delete</string>
    <string name="no_game_title">No puzzles yet, please create them</string>
    <string name="no_book_title">Please create the word book</string>
    <string name="no_book_when_select">Click the "+" to create the word book</string>
</resources>
