<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="8dp"
    android:layout_marginBottom="8dp"
    android:gravity="left|center_vertical"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"

        >
        <ImageView
            android:layout_marginTop="20dp"
            android:src="@drawable/word"
            android:layout_width="0dp"
            android:layout_height="25dp"
            android:layout_weight="1"/>

        <android.support.design.widget.TextInputLayout
            android:layout_weight="4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:hint="@string/word">

            <android.support.design.widget.TextInputEditText
                android:layout_marginRight="50dp"
                android:id="@+id/edit_book_word_item"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:digits="@string/edt_limit"
                android:maxLength="20"
                 />
        </android.support.design.widget.TextInputLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">
        <ImageView
            android:layout_marginTop="20dp"
            android:src="@drawable/translation"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_weight="1"
            />
        <android.support.design.widget.TextInputLayout
            android:layout_width="0dp"
            android:layout_weight="4"
            android:layout_height="wrap_content"
            android:hint="@string/translation">

            <android.support.design.widget.TextInputEditText
                android:id="@+id/edit_book_word_clues_item"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginRight="50dp"
                android:paddingRight="50dp" />
        </android.support.design.widget.TextInputLayout>
    </LinearLayout>
</LinearLayout>