<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.MakeGameActivity"
    tools:ignore="MissingDefaultResource">

    <com.lvleo.dataloadinglayout.DataLoadingLayout
        android:id="@+id/creating_layout"
        android:layout_margin="7dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/transparent"
        android:visibility="gone"
        app:loadingBarColor="@android:color/holo_orange_dark"
        app:statusText="暂无数据"
        app:statusTextColor="@android:color/black"
        app:statusTextSize="16sp" />
    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_marginTop="4dp"
                android:layout_height="wrap_content"
                android:hint="@string/puzzle_name">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_marginHorizontal="16dp"
                android:layout_height="wrap_content"
                android:hint="@string/instruction">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/instruction_create"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />
            </android.support.design.widget.TextInputLayout>


            <LinearLayout
                android:layout_marginHorizontal="16dp"
                android:id="@+id/random_edit_layout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <android.support.design.widget.TextInputLayout
                    android:layout_width="100dp"
                    android:layout_height="wrap_content"

                    android:clickable="false"
                    android:focusable="true"
                    android:focusableInTouchMode="true"
                    android:hint="@string/word_count">

                    <android.support.design.widget.TextInputEditText
                        android:id="@+id/amount_edit_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="number"/>
                </android.support.design.widget.TextInputLayout>

                <ImageView
                    android:id="@+id/random_btn"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:layout_marginHorizontal="5dp"
                    android:src="@drawable/touzitrue" />

                <TextView
                    android:layout_marginTop="25dp"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    style="@style/TextAppearance.AppCompat.Small"
                    android:text="@string/random"
                    />
            </LinearLayout>


            <LinearLayout
                android:layout_marginHorizontal="16dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/word_list"
                    android:textAppearance="@android:style/TextAppearance.Medium"
                    android:textColor="@color/primary_text"
                    android:layout_marginLeft="5dp"/>

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="5dp">

                    <FrameLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentRight="true"
                        android:layout_margin="5dp">

                        <TextView
                            android:id="@+id/select_all_btn"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:text="@string/deselect_all"
                            android:textColor="@color/colorAccent" />
                    </FrameLayout>

                </RelativeLayout>
            </LinearLayout>
            <android.support.v7.widget.RecyclerView
                android:layout_marginVertical="4dp"
                android:layout_marginHorizontal="16dp"
                android:id="@+id/make_game_word_recycler_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </LinearLayout>
    </android.support.v4.widget.NestedScrollView>








</LinearLayout>